# Freebox-connect

./: .gitignore  .pre-commit-config.yaml  README.md  hacs.json  pyproject.toml
.github/workflows/: code-quality.yml
custom_components/freebox_connect/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  device.py  device_tracker.py  diagnostics.py  freebox_api.py  manifest.json  sensor.py  strings.json  switch.py  update.py
custom_components/freebox_connect/translations/: en.json  es.json  fr.json
